# OpenTransferClient

./: .gitmodules  LICENSE  README.md
ui-client/: CMakeLists.txt  CMakePresets.json  ui-client.cpp  ui-client.h
ui-client/android-project/app/: build.gradle
ui-client/src/: err.h  form.h  log.h  otc.cpp  otc.h  window.cpp  window.h
